--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <style>
         .search-container {
             max-width: 600px;
-            margin: 0 auto;
+            margin: 20px auto 0; /* Adds top margin to space it from the title */
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centers the search form */
         }
 
         .search-input-group {
+            width: 100%; /* Ensures the search bar fills the container */
             display: flex;
-            align-items: center;
+            justify-content: center;
         }
 
         #search-bar {
@@ -165,10 +170,11 @@
 
         .module-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Ensures columns adjust based on available space */
-            gap: 20px; /* Provides space between modules */
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
             padding: 20px;
-            align-items: start; /* Aligns items at the start of the grid area */
+            margin-top: 20px; /* Ensures space between search bar and modules */
+            align-items: start;
         }
 
         .module {
@@ -176,8 +182,13 @@
             padding: 15px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             border-radius: 8px;
-            overflow: hidden; /* Prevents content from spilling out */
-            margin-bottom: 20px; /* Adds space below each module */
+            overflow: hidden;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .module:hover {
+            background-color: #007bff;
+            color: #ffffff;
         }
 
         @media (max-width: 768px) {
@@ -203,12 +214,40 @@
         .module a {
             display: inline-block;
             margin-top: 10px;
-            color: #007bff;
+            color: #007bff; /* Initial link color */
             text-decoration: none;
         }
 
         .module a:hover {
+            color: #ffffff; /* Ensures link color is also visible on hover */
             text-decoration: underline;
+        }
+
+        .suggestive-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+
+        .suggestive-buttons button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .suggestive-buttons button:hover {
+            background-color: #0056b3;
+        }
+
+        .hero-content {
+            text-align: center; /* Centers the content */
+            padding: 20px; /* Adds padding for spacing */
         }
     </style>
 </head>
@@ -228,6 +267,13 @@
                             <button type="submit" id="search-button">Search</button>
                         </div>
                     </form>
+                    <div class="suggestive-buttons">
+                        <button onclick="window.open('https://scholar.google.com/scholar?q=Digital+Twin+in+Aerospace', '_blank')">Aerospace</button>
+                        <button onclick="window.open('https://scholar.google.com/scholar?q=Digital+Twin+in+Manufacturing', '_blank')">Manufacturing</button>
+                        <button onclick="window.open('https://scholar.google.com/scholar?q=Digital+Twin+in+Healthcare', '_blank')">Healthcare</button>
+                        <button onclick="window.open('https://scholar.google.com/scholar?q=Digital+Twin+in+Energy', '_blank')">Energy</button>
+                        <button onclick="window.open('https://scholar.google.com/scholar?q=Digital+Twin+in+Smart+Cities', '_blank')">Smart Cities</button>
+                    </div>
                 </div>
                 <div id="search-filters" class="hidden">
                     <!-- Filters will be added dynamically with JavaScript -->
